--- a/taco-cloud/src/main/resources/templates/home.html
+++ b/taco-cloud/src/main/resources/templates/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="EUC-KR">
+<title>Taco Cloud</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <img th:src="@{/images/TacoCloud.png}" alt="">
+  <h1>Welcome to...</h1>
+  <img th:src="@{/images/TacoCloud.png}"/>
 </body>
 </html>
